@@ -10,6 +10,7 @@ Changes between 2.2.1 and 2.2.2.dev
 - fix issue106: allow parametrize to be applied multiple times
   e.g. from module, class and at function level.
 - fix issue107: actually perform session scope finalization
+- don't check in parametrize if indirect parameters are funcarg names
 - add chdir method to monkeypatch funcarg
 - fix crash resulting from calling monkeypatch undo a second time
 - extend reports accepting kwargs to set arbitrary additional attributes
